added syscache and fixed a some elmah config issues

--- a/Purchasing.Web/packages.config
+++ b/Purchasing.Web/packages.config
@@ -32,6 +32,7 @@
   <package id="MvcContrib.Mvc3-ci" version="3.0.100.0" />
   <package id="Newtonsoft.Json" version="4.5.5" />
   <package id="NHibernate" version="3.3.0.4000" />
+  <package id="NHibernate.Caches.SysCache2" version="3.2.0.4000" />
   <package id="NHibernateProfiler" version="1.0.0.937" />
   <package id="NPOI" version="1.2.4" />
   <package id="SassAndCoffee.Core" version="2.0.2.0" />
