--- a/Purchasing.Tests/packages.config
+++ b/Purchasing.Tests/packages.config
@@ -9,7 +9,7 @@
   <package id="Newtonsoft.Json" version="4.5.5" />
   <package id="NHibernate" version="3.3.0.4000" />
   <package id="RhinoMocks" version="3.6.1" />
-  <package id="System.Data.SQLite.x64" version="1.0.80.0" />
+  <package id="SQLitex64" version="1.0.66" />
   <package id="UcdArch" version="3.3.0.76" />
   <package id="UcdArch.NHibernate" version="3.3.0.76" />
 </packages>
