fixed the transforms for web.configs

--- a/Purchasing.Web/Web.Test.config
+++ b/Purchasing.Web/Web.Test.config
@@ -11,6 +11,10 @@
   <!--Add analytics key for GA-->
   <appSettings>
     <add key="AnalyticsKey" value="UA-5512876-11" xdt:Transform="Replace"/>
+
+    <add key="AfsUrl" value="https://kfs-test.ucdavis.edu/kfs-stg/remoting/purchaseDocumentsInterfaceServiceSOAP" xdt:Locator="Match(key)" xdt:Transform="Replace"/>
+    <add key="AfsRoleUrl" value="http://kfs-test.ucdavis.edu/kfs-stg/remoting/financialSystemRoleServiceSOAP" xdt:Locator="Match(key)" xdt:Transform="Replace"/>
+    <add key="AfsToken" value="[External]" xdt:Locator="Match(key)" xdt:Transform="Replace"/>
   </appSettings>
 
   <system.web>
