--- a/Purchasing.Web/Web.Release.config
+++ b/Purchasing.Web/Web.Release.config
@@ -11,9 +11,9 @@
   <!--Add analytics key for GA--> 
   <appSettings>
     <add key="AnalyticsKey" value="UA-5512876-10" xdt:Transform="Replace"/>
-    <add key="AfsUrl" value="https://kfs.ucdavis.edu/kfs-prd/remoting/financialSystemRoleServiceSOAP" xdt:Transform="Replace"/>
-    <add key="AfsRoleUrl" value="https://kfs.ucdavis.edu/kfs-prd/remoting/purchaseDocumentsInterfaceServiceSOAP" xdt:Transform="Replace"/>
-    <add key="AfsToken" value="[External]"/>
+    <add key="AfsRoleUrl" value="https://kfs.ucdavis.edu/kfs-prd/remoting/financialSystemRoleServiceSOAP" xdt:Locator="Match(key)" xdt:Transform="Replace"/>
+    <add key="AfsUrl" value="https://kfs.ucdavis.edu/kfs-prd/remoting/purchaseDocumentsInterfaceServiceSOAP" xdt:Locator="Match(key)" xdt:Transform="Replace"/>
+    <add key="AfsToken" value="[External]" xdt:Locator="Match(key)" xdt:Transform="Replace"/>
   </appSettings>
   
   <system.web>
