Oops, can't add to a null value

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ Purchasing.WS/bin/Test/*.dll
 Purchasing.WS/bin/Test/Purchasing.WS.dll.config
 *.ldf
 *.mdf
+Purchasing.Web/Purchasing.Web.Publish.xml
