added error filter for http errors within elmah

--- a/Purchasing.Web/Web.config
+++ b/Purchasing.Web/Web.config
@@ -40,6 +40,24 @@
     <security allowRemoteAccess="1" />
     <errorLog type="Elmah.SqlErrorLog, Elmah" connectionStringName="MainDB" applicationName="Purchasing" />
     <errorMail from="automatedemail@caes.ucdavis.edu" to="opp-tech@ucdavis.edu" subject="ELMAH: Purchasing web error response" smtpServer="smtp.ucdavis.edu" />
+    <errorFilter>
+      <test>
+        <jscript>
+          <expression>
+            <![CDATA[
+                // @assembly mscorlib
+                // @assembly System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a
+                // @import System.IO
+                // @import System.Web
+
+                  HttpStatusCode == 404
+                  || BaseException instanceof HttpRequestValidationException
+                  || BaseException instanceof System.Web.HttpRequestValidationException
+                ]]>
+          </expression>
+        </jscript>
+      </test>
+    </errorFilter>
   </elmah>
   <connectionStrings>
     <add name="MainDB" connectionString="data source=vogel;Initial Catalog=PrePurchasing;Integrated Security=true;" providerName="System.Data.SqlClient" />
