--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -320,6 +320,7 @@
     <Content Include="Scripts\json2.js" />
     <Content Include="Scripts\modernizr-2.5.3.js" />
     <Content Include="Scripts\OrderTour.js" />
+    <Content Include="Scripts\public\single\FixedHeader.min.js" />
     <Content Include="Scripts\public\common\startup.js" />
     <Content Include="Scripts\public\order\knockout-2.0.0.0.js" />
     <Content Include="Scripts\public\single\chosen.jquery.js" />
