--- a/Purchasing.Tests/Purchasing.Tests.csproj
+++ b/Purchasing.Tests/Purchasing.Tests.csproj
@@ -250,6 +250,7 @@
     <Compile Include="ServiceTests\OrderServiceTests\OrderServiceTestsMisc01.cs" />
     <Compile Include="ServiceTests\OrderServiceTests\OrderServiceTestsReRouteApprovalsForExistingOrder01.cs" />
     <Compile Include="ServiceTests\WorkgroupAddressServiceTests.cs" />
+    <Compile Include="ServiceTests\WorkgroupServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config">
