added a view/class/mapping/repository for reporting.  have the beginning of the controller written out, but haven't gotten a view/testing et.

--- a/Purchasing.Core/Purchasing.Core.csproj
+++ b/Purchasing.Core/Purchasing.Core.csproj
@@ -103,10 +103,12 @@
     <Compile Include="Helpers\BaseConverter.cs" />
     <Compile Include="Helpers\StringExtensions.cs" />
     <Compile Include="IQueryRepositoryFactory.cs" />
+    <Compile Include="IReportRepositoryFactory.cs" />
     <Compile Include="Queries\Access.cs" />
     <Compile Include="Queries\AdminOrderAccess.cs" />
     <Compile Include="Queries\AdminOrg.cs" />
     <Compile Include="Queries\AdminWorkgroup.cs" />
+    <Compile Include="Reports\ReportWorkload.cs" />
     <Compile Include="Queries\WorkgroupRole.cs" />
     <Compile Include="Queries\CompleteOrdersThisWeek.cs" />
     <Compile Include="Domain\ControlledSubstanceInformation.cs" />
