Added HistoryReceivedLineItems repository tests

--- a/Purchasing.Tests/Purchasing.Tests.csproj
+++ b/Purchasing.Tests/Purchasing.Tests.csproj
@@ -194,6 +194,7 @@
     <Compile Include="RepositoryTests\CustomFieldRepositoryTests.cs" />
     <Compile Include="RepositoryTests\EmailPreferencesRepositoryTests.cs" />
     <Compile Include="RepositoryTests\EmailQueueRepositoryTests.cs" />
+    <Compile Include="RepositoryTests\HistoryReceivedLineItemRepositoryTests.cs" />
     <Compile Include="RepositoryTests\KfsDocumentRepositoryTests.cs" />
     <Compile Include="RepositoryTests\LineItemRepositoryTests.cs" />
     <Compile Include="RepositoryTests\NotificationRepositoryTests.cs" />
