--- a/Purchasing.Tests/Purchasing.Tests.csproj
+++ b/Purchasing.Tests/Purchasing.Tests.csproj
@@ -119,6 +119,7 @@
   <ItemGroup>
     <Compile Include="ContinuousDeploymentIntegrationHack.cs" />
     <Compile Include="ControllerTests\AccountControllerTests.cs" />
+    <Compile Include="ControllerTests\AccountsControllerTests.cs" />
     <Compile Include="ControllerTests\AdminControllerTests\AdminControllerTestsMapping.cs" />
     <Compile Include="ControllerTests\AdminControllerTests\AdminControllerTestsPart01.cs" />
     <Compile Include="ControllerTests\AdminControllerTests\AdminControllerTestsReflection.cs" />
