--- a/Purchasing.Tests/Purchasing.Tests.csproj
+++ b/Purchasing.Tests/Purchasing.Tests.csproj
@@ -126,6 +126,7 @@
     <Compile Include="ControllerTests\AdminControllerTests\AdminControllerTestsPart03.cs" />
     <Compile Include="ControllerTests\AdminControllerTests\AdminControllerTestsReflection.cs" />
     <Compile Include="ControllerTests\AdminControllerTests\AdminControllerTestsInit.cs" />
+    <Compile Include="ControllerTests\ApplicationControllerTests.cs" />
     <Compile Include="ControllerTests\AutoApprovalControllerTests\AutoApprovalControllerTestsMapping.cs" />
     <Compile Include="ControllerTests\AutoApprovalControllerTests\AutoApprovalControllerTestsPart01.cs" />
     <Compile Include="ControllerTests\AutoApprovalControllerTests\AutoApprovalControllerTestsPart02.cs" />
