added bug tracking stuff for subAccounts

--- a/Purchasing.Core/Purchasing.Core.csproj
+++ b/Purchasing.Core/Purchasing.Core.csproj
@@ -92,6 +92,7 @@
   <ItemGroup>
     <Compile Include="Domain\Account.cs" />
     <Compile Include="Domain\Approval.cs" />
+    <Compile Include="Domain\BugTracking.cs" />
     <Compile Include="Domain\Building.cs" />
     <Compile Include="Domain\HistoryReceivedLineItem.cs" />
     <Compile Include="Domain\OrderRequestSave.cs" />
