added the contact page of who to call/email when you have questions.

--- a/Purchasing.Core/Purchasing.Core.csproj
+++ b/Purchasing.Core/Purchasing.Core.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Queries\AdminOrderAccess.cs" />
     <Compile Include="Queries\AdminOrg.cs" />
     <Compile Include="Queries\AdminWorkgroup.cs" />
+    <Compile Include="Queries\WorkgroupAdmin.cs" />
     <Compile Include="Reports\ReportWorkload.cs" />
     <Compile Include="Queries\WorkgroupRole.cs" />
     <Compile Include="Queries\CompleteOrdersThisWeek.cs" />
