testing and tweaking the db seeding scripts

--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -889,6 +889,7 @@
     <Content Include="Views\User\Contact.cshtml" />
     <Content Include="Views\Training\Index.cshtml" />
     <Content Include="Views\Training\Setup.cshtml" />
+    <Content Include="Views\Training\Wipe.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
