--- a/Purchasing.Web/Web.config
+++ b/Purchasing.Web/Web.config
@@ -22,7 +22,7 @@
       <!--<property name="connection.driver_class">Purchasing.Web.Helpers.ProfiledSqlClientDriver, Purchasing.Web</property>-->
       <property name="connection.driver_class">NHibernate.Driver.SqlClientDriver</property>
       <property name="connection.connection_string_name">MainDB</property>
-      <property name="default_schema">PrePurchasing.dbo</property>
+      <property name="default_schema">PrePurchasingTraining.dbo</property>
       <property name="generate_statistics">true</property>
       <property name="adonet.batch_size">25</property>
       <property name="prepare_sql">true</property>
@@ -60,7 +60,7 @@
     </errorFilter>
   </elmah>
   <connectionStrings>
-    <add name="MainDB" connectionString="data source=vogel;Initial Catalog=PrePurchasing;Integrated Security=true;" providerName="System.Data.SqlClient" />
+    <add name="MainDB" connectionString="data source=vogel;Initial Catalog=PrePurchasingTraining;Integrated Security=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings file="AppSettings.config">
     <add key="webpages:Version" value="1.0.0.0" />
