--- a/Purchasing.Core/Purchasing.Core.csproj
+++ b/Purchasing.Core/Purchasing.Core.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Domain\Approval.cs" />
     <Compile Include="Domain\BugTracking.cs" />
     <Compile Include="Domain\Building.cs" />
+    <Compile Include="Domain\DepartmentalAdminRequest.cs" />
     <Compile Include="Domain\HistoryReceivedLineItem.cs" />
     <Compile Include="Domain\OrderRequestSave.cs" />
     <Compile Include="Domain\ServiceMessage.cs" />
