--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -243,6 +243,7 @@
     <Compile Include="Controllers\ApplicationController.cs" />
     <Compile Include="Controllers\ConditionalApprovalController.cs" />
     <Compile Include="Controllers\AutoApprovalController.cs" />
+    <Compile Include="Controllers\DepartmentalAdminRequestController.cs" />
     <Compile Include="Models\ContactViewModel.cs" />
     <Compile Include="Controllers\CustomFieldController.cs" />
     <Compile Include="Controllers\ListSyncController.cs" />
@@ -886,6 +887,7 @@
     <Content Include="Views\Report\Index.cshtml" />
     <Content Include="Views\Order\ReroutePurchaser.cshtml" />
     <Content Include="Views\User\Contact.cshtml" />
+    <Content Include="Views\DepartmentalAdminRequest\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
