Dept Admin request

--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -890,6 +890,8 @@
     <Content Include="Views\User\Contact.cshtml" />
     <Content Include="Views\DepartmentalAdminRequest\Create.cshtml" />
     <Content Include="Views\Report\Permissions.cshtml" />
+    <Content Include="Views\DepartmentalAdminRequest\Index.cshtml" />
+    <Content Include="Views\DepartmentalAdminRequest\Approve.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
