History Controller tests complete

--- a/Purchasing.Tests/Purchasing.Tests.csproj
+++ b/Purchasing.Tests/Purchasing.Tests.csproj
@@ -152,6 +152,8 @@
     <Compile Include="ControllerTests\HistoryControllerTests\HistoryControllerTestsInit.cs" />
     <Compile Include="ControllerTests\HistoryControllerTests\HistoryControllerTestsMapping.cs" />
     <Compile Include="ControllerTests\HistoryControllerTests\HistoryControllerTestsPart01.cs" />
+    <Compile Include="ControllerTests\HistoryControllerTests\HistoryControllerTestsPart02.cs" />
+    <Compile Include="ControllerTests\HistoryControllerTests\HistoryControllerTestsPart03.cs" />
     <Compile Include="ControllerTests\HistoryControllerTests\HistoryControllerTestsReflection.cs" />
     <Compile Include="ControllerTests\OrderControllerTests\OrderControllerTestsMethodsIndex01.cs" />
     <Compile Include="ControllerTests\OrderControllerTests\OrderControllerTestsInit.cs" />
