--- a/Purchasing.Tests/Purchasing.Tests.csproj
+++ b/Purchasing.Tests/Purchasing.Tests.csproj
@@ -145,7 +145,11 @@
     <Compile Include="ControllerTests\CustomFieldControllerTests\CustomFieldControllerTestsPart01.cs" />
     <Compile Include="ControllerTests\CustomFieldControllerTests\CustomFieldControllerTestsPart02.cs" />
     <Compile Include="ControllerTests\CustomFieldControllerTests\CustomFieldControllerTestsReflection.cs" />
-    <Compile Include="ControllerTests\DepartmentalAdminRequestControllerTests.cs" />
+    <Compile Include="ControllerTests\DepartmentalAdminRequestControllerTests\DepartmentalAdminRequestControllerTestsInit.cs" />
+    <Compile Include="ControllerTests\DepartmentalAdminRequestControllerTests\DepartmentalAdminRequestControllerTestsMapping.cs" />
+    <Compile Include="ControllerTests\DepartmentalAdminRequestControllerTests\DepartmentalAdminRequestControllerTestsPart01.cs" />
+    <Compile Include="ControllerTests\DepartmentalAdminRequestControllerTests\DepartmentalAdminRequestControllerTestsPart02.cs" />
+    <Compile Include="ControllerTests\DepartmentalAdminRequestControllerTests\DepartmentalAdminRequestControllerTestsReflection.cs" />
     <Compile Include="ControllerTests\DirectorySearchControllerTests.cs" />
     <Compile Include="ControllerTests\ErrorControllerTests.cs" />
     <Compile Include="ControllerTests\HelpControllerTests.cs" />
