--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -317,8 +317,10 @@
     <Content Include="Css\images\ui-bg_glass-arrows.png" />
     <Content Include="Images\ajax-loader.gif" />
     <Content Include="Images\arrow-down.png" />
+    <Content Include="Images\browser_logos-32.png" />
     <Content Include="Images\datatable-bg.jpg" />
     <Content Include="Images\devfriend-sprite.png" />
+    <Content Include="Images\icon-assigned.png" />
     <Content Include="Images\KFSVendorSearch.gif" />
     <Content Include="Scripts\json2.min.js" />
     <Content Include="Scripts\json2.js" />
