order controller tests

--- a/Purchasing.Tests/Purchasing.Tests.csproj
+++ b/Purchasing.Tests/Purchasing.Tests.csproj
@@ -165,6 +165,7 @@
     <Compile Include="ControllerTests\OrderControllerTests\OrderControllerTestsInit.cs" />
     <Compile Include="ControllerTests\OrderControllerTests\OrderControllerTestsMapping.cs" />
     <Compile Include="ControllerTests\OrderControllerTests\OrderControllerTestsMethodsPart02.cs" />
+    <Compile Include="ControllerTests\OrderControllerTests\OrderControllerTestsMethodsPart03.cs" />
     <Compile Include="ControllerTests\OrderControllerTests\OrderControllerTestsReflection.cs" />
     <Compile Include="ControllerTests\WizardControllerTests\WizardControllerTestsInit.cs" />
     <Compile Include="ControllerTests\WizardControllerTests\WizardControllerTestsMapping.cs" />
