Begin cascade permissions down when adding user to admin workgroup.

--- a/Purchasing.Core/Purchasing.Core.csproj
+++ b/Purchasing.Core/Purchasing.Core.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Queries\AdminOrderAccess.cs" />
     <Compile Include="Queries\AdminOrg.cs" />
     <Compile Include="Queries\AdminWorkgroup.cs" />
+    <Compile Include="Queries\RelatedWorkgroups.cs" />
     <Compile Include="Queries\WorkgroupAdmin.cs" />
     <Compile Include="Reports\ReportWorkload.cs" />
     <Compile Include="Queries\WorkgroupRole.cs" />
