updated the dbhelper to include order tracking when creating dummy orders

--- a/Purchasing.Web/Web.config
+++ b/Purchasing.Web/Web.config
@@ -60,7 +60,7 @@
     </errorFilter>
   </elmah>
   <connectionStrings>
-    <add name="MainDB" connectionString="data source=vogel;Initial Catalog=PrePurchasingTraining;Integrated Security=true;" providerName="System.Data.SqlClient" />
+    <add name="MainDB" connectionString="data source=joeymousepads;Initial Catalog=PrePurchasingTraining;Integrated Security=true;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings file="AppSettings.config">
     <add key="webpages:Version" value="1.0.0.0" />
