Pages to load child permissions and a page to validate child permissions

--- a/Purchasing.Web/Purchasing.Web.csproj
+++ b/Purchasing.Web/Purchasing.Web.csproj
@@ -900,6 +900,7 @@
     <Content Include="Views\DepartmentalAdminRequest\_daRequest.cshtml" />
     <Content Include="Views\Help\Index.cshtml" />
     <Content Include="Views\Admin\UpdateChildWorkgroups.cshtml" />
+    <Content Include="Views\Admin\ValidateChildWorkgroups.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
