Update and add tests

--- a/Purchasing.Tests/Purchasing.Tests.csproj
+++ b/Purchasing.Tests/Purchasing.Tests.csproj
@@ -124,6 +124,7 @@
     <Compile Include="ControllerTests\AdminControllerTests\AdminControllerTestsPart01.cs" />
     <Compile Include="ControllerTests\AdminControllerTests\AdminControllerTestsPart02.cs" />
     <Compile Include="ControllerTests\AdminControllerTests\AdminControllerTestsPart03.cs" />
+    <Compile Include="ControllerTests\AdminControllerTests\AdminControllerTestsPart04.cs" />
     <Compile Include="ControllerTests\AdminControllerTests\AdminControllerTestsReflection.cs" />
     <Compile Include="ControllerTests\AdminControllerTests\AdminControllerTestsInit.cs" />
     <Compile Include="ControllerTests\ApplicationControllerTests.cs" />
