--- a/Purchasing.Web/packages.config
+++ b/Purchasing.Web/packages.config
@@ -25,6 +25,7 @@
   <package id="jQuery.vsdoc" version="1.6" />
   <package id="Jurassic" version="2.1.1" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.7.0.0" targetFramework="net40" />
   <package id="MiniProfiler" version="1.9" />
   <package id="Modernizr" version="2.5.3" />
   <package id="Mvc3Futures" version="3.0.20105.0" />
@@ -41,4 +42,5 @@
   <package id="UcdArch.Mvc" version="3.3.0.76" />
   <package id="UcdArch.NHibernate" version="3.3.0.76" />
   <package id="WebActivator" version="1.5" />
+  <package id="WindowsAzure.Storage" version="1.7.0.0" targetFramework="net40" />
 </packages>
