--- a/.gitignore
+++ b/.gitignore
@@ -43,5 +43,7 @@ Purchasing.WS/bin/Test/*.dll
 Purchasing.WS/bin/Test/Purchasing.WS.dll.config
 *.ldf
 *.mdf
+#Azure config files
 Purchasing.Web/Purchasing.Web.Publish.xml
 Web.ReleaseAzure.config
+newrelic.cmd
