--- a/Purchasing.Web/Web.config
+++ b/Purchasing.Web/Web.config
@@ -43,8 +43,7 @@
     <errorFilter>
       <test>
         <jscript>
-          <expression>
-            <![CDATA[
+          <expression><![CDATA[
                 // @assembly mscorlib
                 // @assembly System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a
                 // @import System.IO
@@ -53,8 +52,7 @@
                   HttpStatusCode == 404
                   || BaseException instanceof HttpRequestValidationException
                   || BaseException instanceof System.Web.HttpRequestValidationException
-                ]]>
-          </expression>
+                ]]></expression>
         </jscript>
       </test>
     </errorFilter>
@@ -75,6 +73,7 @@
     <add key="AfsUrl" value="https://kfs-test.ucdavis.edu/kfs-stg/remoting/purchaseDocumentsInterfaceServiceSOAP" />
     <add key="AfsRoleUrl" value="http://kfs-test.ucdavis.edu/kfs-stg/remoting/financialSystemRoleServiceSOAP" />
     <add key="AfsToken" value="stage" />
+    <add key="NewRelic.AppName" value="PrePurchasing" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
