--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ Purchasing.WS/bin/Test/Purchasing.WS.dll.config
 *.mdf
 Purchasing.Web/Purchasing.Web.Publish.xml
 Web.ReleaseAzure.config
+Purchasing.Web.Azure/ServiceDefinition.build.csdef
