git ignore azure config

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ Purchasing.WS/bin/Test/Purchasing.WS.dll.config
 *.ldf
 *.mdf
 Purchasing.Web/Purchasing.Web.Publish.xml
+
+Purchasing.Web/Web.ReleaseAzure.config
